# django-allauth-sniperlinks

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
allauth_sniperlinks/: adapter.py  admin.py  app_settings.py  apps.py  context_processors.py  models.py  signals.py  utils.py
allauth_sniperlinks/management/commands/: clear_sniperlink_cache.py
allauth_sniperlinks/migrations/: 0001_initial.py  0002_alter_sniperlink_mail_provider.py
allauth_sniperlinks/templates/account/messages/: email_confirmation_sent.txt
allauth_sniperlinks/templates/allauth_sniperlinks/: banner.html
allauth_sniperlinks/templatetags/: sniperlink_tags.py
