[metadata]
name = django-allauth-sniperlinks
version = 0.3
description = A Django app to provide sniper links for allauth email verification.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/skulegirl/django-allauth-sniperlinks
author = Anna Maste
author_email = anna@subscribesense.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django>=3.2
    django-allauth>=0.41.0
    tld>=0.12.6
    dnspython>=2.2.0